--- a/setup.cfg
+++ b/setup.cfg
@@ -6,3 +6,6 @@ norecursedirs=.* *.egg-info{args}
 ignore = F999,E501,E128,E124,E126,F841,E123
 max-line-length = 80
 exclude = env,.svn,CVS,.bzr,.hg,.git,__pycache__
+
+[metadata]
+description-file = README.rst
