--- a/eci.yaml
+++ b/eci.yaml
@@ -1,3 +1,5 @@
 tests:
     - flake8
-    - py.test
+    - coverage run -m py.test && coverage html --include=easyci/*
+collect_results:
+    - htmlcov/***
